view pregnant mother table

--- a/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
+++ b/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
@@ -43,11 +43,11 @@
                    <div class="main-field">
                    <!-- <mat-accordation> -->
                                           
-                      <mat-expansion-panel>
-                          <mat-expansion-panel-header>
+                      <!-- <mat-expansion-panel> -->
+                          <!-- <mat-expansion-panel-header>
                               <mat-panel-title><h4>Personal And Medical Details Of Pregnancy Women</h4></mat-panel-title>
                               <mat-panel-description>This Field Has some required fields.</mat-panel-description>
-                            </mat-expansion-panel-header>
+                            </mat-expansion-panel-header> -->
                    <div class="second_field">
                      <!--start 2nd field-->
 
@@ -986,15 +986,15 @@
                       </div>
                      <!--end 9 field-->
                    </div>
-                  </mat-expansion-panel>
+                  <!-- </mat-expansion-panel> -->
                    <div class="second_page">
                      <!--start second page-->
-                     <mat-expansion-panel  (opened)="panelOpenState = true"
+                     <!-- <mat-expansion-panel  (opened)="panelOpenState = true"
                                             (closed)="panelOpenState = false">
                             <mat-expansion-panel-header>
                                 <mat-panel-title><h4>Early Obstetric Details</h4></mat-panel-title>
                                 <mat-panel-description>Early Obstetric Details Of Pregnancy Women</mat-panel-description>
-                              </mat-expansion-panel-header>
+                              </mat-expansion-panel-header> -->
                       <div class="card-body">
                         <div class="tab-content">
                             <div class="tab-pane active" id="profile">
@@ -1453,16 +1453,16 @@
                           </div>
                         </div>
                      <!--end second page-->
-                     </mat-expansion-panel>
+                     <!-- </mat-expansion-panel> -->
                    </div>
                    <div class="third_page">
                      <!--start third page-->
-                     <mat-expansion-panel  (opened)="panelOpenState = true"
+                     <!-- <mat-expansion-panel  (opened)="panelOpenState = true"
                                             (closed)="panelOpenState = false">
                             <mat-expansion-panel-header>
                                 <mat-panel-title><h4>Clinic Details</h4></mat-panel-title>
                                 <mat-panel-description>Clinic Details Of Pregnancy Women</mat-panel-description>
-                              </mat-expansion-panel-header>
+                              </mat-expansion-panel-header> -->
                   <h4>First Four Clinics</h4>
                      <div class="card-body">
                         <div class="tab-content">
@@ -2678,17 +2678,17 @@
                          <!--end 3 field-->
                        </div>
                        <!-- missing field -->
-                       </mat-expansion-panel>
+                       <!-- </mat-expansion-panel> -->
                      <!--end third page-->
                    </div>
                    <div class="fourth_page">
                      <!--start 4th page-->
-                     <mat-expansion-panel  (opened)="panelOpenState = true"
+                     <!-- <mat-expansion-panel  (opened)="panelOpenState = true"
                                             (closed)="panelOpenState = false">
                             <mat-expansion-panel-header>
                                 <mat-panel-title><h4>After Delivery Details</h4></mat-panel-title>
                                 <mat-panel-description>After Delivery Details Details Of Pregnancy Women</mat-panel-description>
-                              </mat-expansion-panel-header>
+                              </mat-expansion-panel-header> -->
                      <div class="row">
                        <div class="col-md-4">
                           <mat-form-field class="example-full-width">
@@ -3711,7 +3711,7 @@
                        </div>
                        <!--end 6 field-->
                      </div>
-                     </mat-expansion-panel>
+                     <!-- </mat-expansion-panel> -->
                      <!--end 4thpage-->
                    </div>
                   <!-- </mat-accordation> -->
