--- a/Frontend/src/app/Graphs/weight-height-graphby-id/weight-height-graphby-id.component.html
+++ b/Frontend/src/app/Graphs/weight-height-graphby-id/weight-height-graphby-id.component.html
@@ -1,2 +1,22 @@
-
-<canvas id="LineChart"></canvas>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header card-header-info">
+                        <h4 class="card-title ">Simple Table</h4>
+                        <p class="card-category"> Here is a subtitle for this table</p>
+                    </div>
+                    <div class="card-body">
+                        <div style="text-align:center">
+                            
+                            <canvas id="lineChart" height="200px"></canvas>
+                        
+                        </div>
+                    </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+</div>
