--- a/Frontend/src/app/MOHComponents/view-weight-by-id/view-weight-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-weight-by-id/view-weight-by-id.component.html
@@ -4,9 +4,9 @@
         <div class="col-md-2">
             <mat-slide-toggle  [formControl]="autoRenew" (change)="onChange()">Edit details</mat-slide-toggle>
         </div>
-        <!-- <div class="col-md-2">
-           <button  (click)="onClickMe()" class="btn btn-info btn-block">Change As Mother</button>
-        </div> -->
+        <div class="col-md-2">
+           <button  (click)="onClickMe()" class="btn btn-info btn-block">View Weight Graph of The Baby</button>
+        </div> 
         <div class="col-md-12">
       <div class="col-md-12">
           <div class="card">
