Temporary Commit Interface Reduced

--- a/Frontend/src/app/MOHComponents/clinic-notifications/clinic-notifications.component.html
+++ b/Frontend/src/app/MOHComponents/clinic-notifications/clinic-notifications.component.html
@@ -4,14 +4,14 @@
             
         <div class="row">
                 <div class="col-md-6"></div>  
-                <div class="col-md-3"> <a routerLink="viewClinicRecords" routerLinkActive="active"  class="btn btn-danger btn-block">View Clinic Records</a></div>
-                <div class="col-md-3"> <a routerLink="addClinic" routerLinkActive="active"  class="btn btn-danger btn-block">Schedule a Clinic</a></div>     
+                <div class="col-md-3"> <a routerLink="viewClinicRecords" routerLinkActive="active"  class="btn btn-info">View Clinic Records</a></div>
+                <div class="col-md-3"> <a routerLink="addClinic" routerLinkActive="active"  class="btn btn-info">Schedule a Clinic</a></div>     
                 
                 <div class="col-md-12">
                                 
                 <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title ">Upcoming Clinics</h4>
+                    <div class="card-header">
+                        <h3 class="card-title ">Upcoming Clinics</h3>
                         <p class="card-category"> </p>
                     </div>
                     <div class="card-body">
