--- a/Frontend/src/app/MOHComponents/clinic-records/clinic-records.component.html
+++ b/Frontend/src/app/MOHComponents/clinic-records/clinic-records.component.html
@@ -9,7 +9,7 @@
       <div class="col-md-12">
     
           <div class="card card-plain">
-              <div class="card-header card-header-danger">
+              <div class="card-header">
                   <h4 class="card-title mt-0"> Previous Clinic Records</h4>
                   <p class="card-category"> </p>
               </div>
