--- a/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
+++ b/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
@@ -4,33 +4,33 @@
     <div class="row">
             
             <div class="col-md-4"></div>
-            <div class="col-md-5"><h3>View Babies of the Area</h3></div>
+            <div class="col-md-5"><h3></h3></div>
             <div class="col-md-3"> <a routerLink="AddMotherBabyJoined" class="btn btn-info btn-block">Add a new Baby</a></div>
         </div>
       <div class="row">
           <div class="col-md-12">
               <div class="card">
-                  <div class="card-header card-header-info">
-                      <h4 class="card-title ">Simple Table</h4>
-                      <p class="card-category"> Here is a subtitle for this table</p>
+                  <div class="card-header">
+                      <h3 class="card-title ">View Babies of the Area</h3>
+                      <p class="card-category"> </p>
                   </div>
                   <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-hover table-bordered">
-                            <tbody>
+                            
                                 <tr>
-                                    <td align="center" rowspan=4><b>Mother No</b></td>  <td align="center" rowspan=4><b>Name of the Child</b></td>  <td align="center" rowspan=4><b>Mothers Name</b></td>  <td align="center" rowspan=4><b>Address</b></td>  <td align="center" rowspan=4><b>Sex</b></td>  <td align="center" rowspan=4><b>Date of Birth</b></td>  <td align="center" rowspan=4><b>Birth Weight</b></td>  <td align="center" rowspan=4><b>Date of Registration</b></td>  <td rowspan=4><b>Registration Category</b></td>  <td colspan=17 align="center"><b>Date of Immunization</b></td>  <td align="center" colspan=11><b>Vitamin a mega dose</b></td><td rowspan = 4><b>Remarks</b></td>
+                                    <th align="center" rowspan=4><b>Mother No</b></th>  <th align="center" rowspan=4><b>Name of the Child</b></th>  <th align="center" rowspan=4><b>Mothers Name</b></th>  <th align="center" rowspan=4><b>Address</b></th>  <th align="center" rowspan=4><b>Sex</b></th>  <th align="center" rowspan=4><b>Date of Birth</b></th>  <th align="center" rowspan=4><b>Birth Weight</b></th>  <th align="center" rowspan=4><b>Date of Registration</b></th>  <th rowspan=4><b>Registration Category</b></th>  <th colspan=17 align="center"><b>Date of Immunization</b></th>  <th align="center" colspan=11><b>Vitamin a mega dose</b></th><th rowspan = 4><b>Remarks</b></th>
                                 </tr>
                                 <tr>
-                                    <td align="center" rowspan=3><b>BGC</b></td><td align="center" rowspan=3><b>SCAR (Y/N)</b></td><td align="center" colspan=3 rowspan=2><b>Pentavalent</b></td><td align="center" colspan=5><b>Polio</b></td><td align="center" rowspan=3><b>Japanese Encephalitis</b></td><td align="center" rowspan=3><b>Measles/Mumps/Rubella (MMR) I</b></td><td align="center" rowspan=3><b>Diptheria/Pertusis/Tetanus 4</b></td><td align="center" rowspan=3><b>Polio 4</b></td><td align="center" rowspan=3><b>Measles/Mumps/Rubella (MMR) 2</b></td><td align="center" rowspan=3><b>Diptheria/Tetanus 5</b></td><td align="center" rowspan=3><b>Diptheria/Tetanus 6</b></td><td align="center" rowspan=3><b>Postnatal Mothers</b></td><td align="center" rowspan=3><b>At 6<sup>th</sup> Month</b></td><td align="center"><b>At 1 year</b></td><td align="center" rowspan=3><b>At 1 1/2 years</b></td><td align="center" rowspan="3"><b>At Two Years</b></td><td align="center" rowspan=3><b>At 2 1/2 Years</b></td><td align="center" rowspan=3><b>At 3 Years</b></td><td align="center" rowspan=3><b>At 4 Years</b></td><td align="center" rowspan=3><b>At 4 1/2 Years</b></td><td align="center" rowspan=3><b>At 9 Years</b></td><td align="center" rowspan=3><b>At 12 Years</b></td>
+                                    <th align="center" rowspan=3><b>BGC</b></th><th align="center" rowspan=3><b>SCAR (Y/N)</b></th><th align="center" colspan=3 rowspan=2><b>Pentavalent</b></th><th align="center" colspan=5><b>Polio</b></th><th align="center" rowspan=3><b>Japanese Encephalitis</b></th><th align="center" rowspan=3><b>Measles/Mumps/Rubella (MMR) I</b></th><th align="center" rowspan=3><b>Diptheria/Pertusis/Tetanus 4</b></th><th align="center" rowspan=3><b>Polio 4</b></th><th align="center" rowspan=3><b>Measles/Mumps/Rubella (MMR) 2</b></th><th align="center" rowspan=3><b>Diptheria/Tetanus 5</b></th><th align="center" rowspan=3><b>Diptheria/Tetanus 6</b></th><th align="center" rowspan=3><b>Postnatal Mothers</b></th><th align="center" rowspan=3><b>At 6<sup>th</sup> Month</b></th><th align="center"><b>At 1 year</b></th><th align="center" rowspan=3><b>At 1 1/2 years</b></th><th align="center" rowspan="3"><b>At Two Years</b></th><th align="center" rowspan=3><b>At 2 1/2 Years</b></th><th align="center" rowspan=3><b>At 3 Years</b></th><th align="center" rowspan=3><b>At 4 Years</b></th><th align="center" rowspan=3><b>At 4 1/2 Years</b></th><th align="center" rowspan=3><b>At 9 Years</b></th><th align="center" rowspan=3><b>At 12 Years</b></th>
                                 </tr>
                                 <tr>
-                                    <td align="center" colspan=3><b>OPV</b></td><td align="center" colspan="2"><b>FPV</b></td>
+                                    <th align="center" colspan=3><b>OPV</b></th><th align="center" colspan="2"><b>FPV</b></th>
                                 </tr>
                                 <tr>
-                                        <td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>2m</b></td><td><b>4m</b></td>
+                                        <th><b>1</b></th><th><b>2</b></th><th><b>3</b></th><th><b>1</b></th><th><b>2</b></th><th><b>3</b></th><th><b>2m</b></th><th><b>4m</b></th>
                                 </tr>
-                                
+                                <tbody>
                                 <tr *ngFor="let motherbabyjoineddata of motherbabyjoineddatas" (click)="onClickMe(motherbabyjoineddata.baby_id)" style="cursor:pointer">
                                     <td>{{motherbabyjoineddata.mother_id}}</td>
                                     <td>{{motherbabyjoineddata.child_name}}</td>
