--- a/Frontend/src/app/MOHComponents/view-mothers/view-mothers.component.html
+++ b/Frontend/src/app/MOHComponents/view-mothers/view-mothers.component.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-md-12">
         <div class="card">
-            <div class="card-header card-header-info">
+            <div class="card-header">
                 <h4 class="card-title "><h3>View Mother details</h3></h4>
                 <h5 class="card-category">Click to view the individual Records</h5>
             </div>
@@ -14,62 +14,63 @@
               <div class="table-responsive">
                   <table class="table table-hover table-bordered">
                       
-                          <tbody>
+                          
                               <tr>
-                              <td rowspan = 2><b>Mother ID</b></td>
-                              <td rowspan = 2><b>Registration Number</b></td>
-                              <td rowspan = 2><b>Date of Registration</b></td>
-                              <td rowspan = 2><b>Name of the Pregnant Mother</b></td>
-                              <td rowspan = 2><b>Address</b></td>
-                              <td rowspan = 2><b>Age</b></td>
-                              <td rowspan = 2><b>No. of Living Children</b></td> 
-                              <td rowspan = 2 ><b>Gravidity</b> </td>  
-                              <td rowspan = 2 ><b>POA</b> </td>
-                              <td rowspan = 2 ><b>EDD</b> </td>  
-                              <td rowspan = 2 ><b>Protection Against Tetanus</b> </td> 
-                              <td rowspan = 2 ><b>Protection Against Rubella</b> </td> 
-                              <td colspan=2 align="center">Risked Conditions</td>
-                              <td colspan=2 align="center" ><b>Blood Sugar Level</b> </td> 
-                              <td colspan=2 align="center" ><b>Hemoglobin Level</b> </td> 
-                              <td rowspan = 2 ><b>Blood Group</b> </td> 
-                              <td colspan=2 align="center" ><b>VDRL Test</b> </td> 
-                              <td rowspan = 2 ><b>HIV Screening</b> </td>  
-                              <td colspan=5 align="center" ><b>Maternal Weight</b> </td> 
-                              <td rowspan = 2 ><b>BMI Before 12 weeks</b> </td> 
-                              <td colspan=4 align="center" ><b>Delivery Informations </b> </td> 
-                              <td rowspan = 2 ><b>Mode of Delivery</b> </td> 
-                              <td rowspan = 2 ><b>Birth Weight</b> </td> 
-                              <td colspan=5 align="center" ><b>Postpartum Visits</b> </td> 
-                              <td colspan=2 align="center" ><b>According to BI Register</b> </td>
-                              <td rowspan = 2><b>Remarks</b></td>
+                              <th rowspan = 2><b>Mother ID</b></th>
+                              <th rowspan = 2><b>Registration Number</b></th>
+                              <th rowspan = 2><b>Date of Registration</b></th>
+                              <th rowspan = 2><b>Name of the Pregnant Mother</b></th>
+                              <th rowspan = 2><b>Address</b></th>
+                              <th rowspan = 2><b>Age</b></th>
+                              <th rowspan = 2><b>No. of Living Children</b></th> 
+                              <th rowspan = 2 ><b>Gravidity</b> </th>  
+                              <th rowspan = 2 ><b>POA</b> </th>
+                              <th rowspan = 2 ><b>EDD</b> </th>  
+                              <th rowspan = 2 ><b>Protection Against Tetanus</b> </th> 
+                              <th rowspan = 2 ><b>Protection Against Rubella</b> </th> 
+                              <th colspan=2 align="center">Risked Conditions</th>
+                              <th colspan=2 align="center" ><b>Blood Sugar Level</b> </th> 
+                              <th colspan=2 align="center" ><b>Hemoglobin Level</b> </th> 
+                              <th rowspan = 2 ><b>Blood Group</b> </th> 
+                              <th colspan=2 align="center" ><b>VDRL Test</b> </th> 
+                              <th rowspan = 2 ><b>HIV Screening</b> </th>  
+                              <th colspan=5 align="center" ><b>Maternal Weight</b> </th> 
+                              <th rowspan = 2 ><b>BMI Before 12 weeks</b> </th> 
+                              <th colspan=4 align="center" ><b>Delivery Informations </b> </th> 
+                              <th rowspan = 2 ><b>Mode of Delivery</b> </th> 
+                              <th rowspan = 2 ><b>Birth Weight</b> </th> 
+                              <th colspan=5 align="center" ><b>Postpartum Visits</b> </th> 
+                              <th colspan=2 align="center" ><b>According to BI Register</b> </th>
+                              <th rowspan = 2><b>Remarks</b></th>
                               </tr>
 
                               <tr>  
-                                <td><b>Low</b></td>
-                                <td><b>High</b></td>
-                                <td><b>first 12 weeks</b></td>
-                                <td><b>24-28 weeks</b></td>
-                                <td><b>first 12 weeks</b></td>
-                                <td><b>26-28 weeks</b></td>
-                                <td><b>Before 12 Weeks </b></td>
-                                <td><b>After 12 Weeks</b></td>
-                                <td><b>Wt. at First Visit</b></td>
-                                <td><b>POA at First Visit</b></td>
-                                <td><b>Wt. at Last Visit</b></td>
-                                <td><b>POA at Last Visit</b></td>
-                                <td><b>Weight Gained During Pregnancy</b></td>
-                                <td><b>Date</b></td>
-                                <td><b>Place</b></td>
-                                <td><b>Outcomde</b></td>
-                                <td><b>Male/Female</b></td>
-                                <td><b>Within First 5 days</b></td>
-                                <td><b>6-10 Days</b></td>
-                                <td><b>Late First Visits</b></td>
-                                <td><b>14-21 Days</b></td>
-                                <td><b>Around 42 Days</b></td>
-                                <td><b>Number</b></td>
-                                <td><b>Date</b></td>
+                                <th><b>Low</b></th>
+                                <th><b>High</b></th>
+                                <th><b>first 12 weeks</b></th>
+                                <th><b>24-28 weeks</b></th>
+                                <th><b>first 12 weeks</b></th>
+                                <th><b>26-28 weeks</b></th>
+                                <th><b>Before 12 Weeks </b></th>
+                                <th><b>After 12 Weeks</b></th>
+                                <th><b>Wt. at First Visit</b></th>
+                                <th><b>POA at First Visit</b></th>
+                                <th><b>Wt. at Last Visit</b></th>
+                                <th><b>POA at Last Visit</b></th>
+                                <th><b>Weight Gained During Pregnancy</b></th>
+                                <th><b>Date</b></th>
+                                <th><b>Place</b></th>
+                                <th><b>Outcomde</b></th>
+                                <th><b>Male/Female</b></th>
+                                <th><b>Within First 5 days</b></th>
+                                <th><b>6-10 Days</b></th>
+                                <th><b>Late First Visits</b></th>
+                                <th><b>14-21 Days</b></th>
+                                <th><b>Around 42 Days</b></th>
+                                <th><b>Number</b></th>
+                                <th><b>Date</b></th>
                               </tr>
+                              <tbody>
                               <tr *ngFor="let mother of mother" (click)="onClickMe(mother.mother_id)" style="cursor:pointer">
                                 <td>{{mother.mother_id}}</td>
                                 <td>{{mother.registration_no}}</td>
