--- a/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
+++ b/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
@@ -6,109 +6,109 @@
   <div class="row">
     <div class="col-md-12">
         <div class="card">
-            <div class="card-header card-header-info">
+            <div class="card-header">
                 <h4 class="card-title "><h3>View Children Weight Height Table</h3></h4>
                 <h5 class="card-category">Click to view the individual Records</h5>
             </div>
             <div class="card-body">
               <div class="table-responsive">
                   <table class="table table-hover table-bordered">
-                    <tbody>
+                    
                       <tr>
-                        <td rowspan = 2><b>Baby ID</b></td>
-                        <td rowspan = 2><b>Batch No</b></td>
-                        <td rowspan = 2><b>Baby Name</b></td>
-                        <td rowspan = 2><b>Sex</b></td>
-                        <td rowspan = 2><b>Date Of Birth</b></td>
-                        <td colspan=2 align="center">At Birth</td>
-                        <td colspan=12 align="center">Age Of Child(Month) 1 Year</td>
-                        <td colspan=2 align="center">Age Of Child(Month) 1 Year</td>
-                        <td colspan=12 align="center">Age Of Child(Month) 2 Year</td>
-                        <td colspan=2 align="center">Age Of Child(Month) 2 Year</td>
-                        <td colspan=12 align="center">Age Of Child(Month) 3 Year</td>
-                        <td colspan=2 align="center">Age Of Child(Month) 3 Year</td>
-                        <td colspan=12 align="center">Age Of Child(Month) 4 Year</td>
-                        <td colspan=2 align="center">Age Of Child(Month) 4 Year</td>
-                        <td colspan=12 align="center">Age Of Child(Month) 5 Year</td>
-                        <td colspan=2 align="center">Age Of Child(Month) 5 Year</td>
-                        <td rowspan = 4><b>Other</b></td>
+                        <th rowspan = 2><b>Baby ID</b></th>
+                        <th rowspan = 2><b>Batch No</b></th>
+                        <th rowspan = 2><b>Baby Name</b></th>
+                        <th rowspan = 2><b>Sex</b></th>
+                        <th rowspan = 2><b>Date Of Birth</b></th>
+                        <th colspan=2 align="center">At Birth</th>
+                        <th colspan=12 align="center">Age Of Child(Month) 1 Year</th>
+                        <th colspan=2 align="center">Age Of Child(Month) 1 Year</th>
+                        <th colspan=12 align="center">Age Of Child(Month) 2 Year</th>
+                        <th colspan=2 align="center">Age Of Child(Month) 2 Year</th>
+                        <th colspan=12 align="center">Age Of Child(Month) 3 Year</th>
+                        <th colspan=2 align="center">Age Of Child(Month) 3 Year</th>
+                        <th colspan=12 align="center">Age Of Child(Month) 4 Year</th>
+                        <th colspan=2 align="center">Age Of Child(Month) 4 Year</th>
+                        <th colspan=12 align="center">Age Of Child(Month) 5 Year</th>
+                        <th colspan=2 align="center">Age Of Child(Month) 5 Year</th>
+                        <th rowspan = 4><b>Other</b></th>
                       </tr>
 
                       <tr>
-                          <td><b>Weight</b></td>
-                          <td><b>Length</b></td>
-                          <td><b>1</b></td>
-                          <td><b>2</b></td>
-                          <td><b>3</b></td>
-                          <td><b>4</b></td>
-                          <td><b>5</b></td>
-                          <td><b>6</b></td>
-                          <td><b>7</b></td>
-                          <td><b>8</b></td>
-                          <td><b>9</b></td>
-                          <td><b>10</b></td>
-                          <td><b>11</b></td>
-                          <td><b>12</b></td>
-                          <td><b>Date</b></td>
-                          <td><b>Length</b></td>
-                          <td><b>1</b></td>
-                          <td><b>2</b></td>
-                          <td><b>3</b></td>
-                          <td><b>4</b></td>
-                          <td><b>5</b></td>
-                          <td><b>6</b></td>
-                          <td><b>7</b></td>
-                          <td><b>8</b></td>
-                          <td><b>9</b></td>
-                          <td><b>10</b></td>
-                          <td><b>11</b></td>
-                          <td><b>12</b></td>
-                          <td><b>Date</b></td>
-                          <td><b>Length</b></td>
-                          <td><b>1</b></td>
-                          <td><b>2</b></td>
-                          <td><b>3</b></td>
-                          <td><b>4</b></td>
-                          <td><b>5</b></td>
-                          <td><b>6</b></td>
-                          <td><b>7</b></td>
-                          <td><b>8</b></td>
-                          <td><b>9</b></td>
-                          <td><b>10</b></td>
-                          <td><b>11</b></td>
-                          <td><b>12</b></td>
-                          <td><b>Date</b></td>
-                          <td><b>Length</b></td>
-                          <td><b>1</b></td>
-                          <td><b>2</b></td>
-                          <td><b>3</b></td>
-                          <td><b>4</b></td>
-                          <td><b>5</b></td>
-                          <td><b>6</b></td>
-                          <td><b>7</b></td>
-                          <td><b>8</b></td>
-                          <td><b>9</b></td>
-                          <td><b>10</b></td>
-                          <td><b>11</b></td>
-                          <td><b>12</b></td>
-                          <td><b>Date</b></td>
-                          <td><b>Length</b></td>
-                          <td><b>1</b></td>
-                          <td><b>2</b></td>
-                          <td><b>3</b></td>
-                          <td><b>4</b></td>
-                          <td><b>5</b></td>
-                          <td><b>6</b></td>
-                          <td><b>7</b></td>
-                          <td><b>8</b></td>
-                          <td><b>9</b></td>
-                          <td><b>10</b></td>
-                          <td><b>11</b></td>
-                          <td><b>12</b></td>
-                          <td><b>Date</b></td>
-                          <td><b>Length</b></td>
+                          <th><b>Weight</b></th>
+                          <th><b>Length</b></th>
+                          <th><b>1</b></th>
+                          <th><b>2</b></th>
+                          <th><b>3</b></th>
+                          <th><b>4</b></th>
+                          <th><b>5</b></th>
+                          <th><b>6</b></th>
+                          <th><b>7</b></th>
+                          <th><b>8</b></th>
+                          <th><b>9</b></th>
+                          <th><b>10</b></th>
+                          <th><b>11</b></th>
+                          <th><b>12</b></th>
+                          <th><b>Date</b></th>
+                          <th><b>Length</b></th>
+                          <th><b>1</b></th>
+                          <th><b>2</b></th>
+                          <th><b>3</b></th>
+                          <th><b>4</b></th>
+                          <th><b>5</b></th>
+                          <th><b>6</b></th>
+                          <th><b>7</b></th>
+                          <th><b>8</b></th>
+                          <th><b>9</b></th>
+                          <th><b>10</b></th>
+                          <th><b>11</b></th>
+                          <th><b>12</b></th>
+                          <th><b>Date</b></th>
+                          <th><b>Length</b></th>
+                          <th><b>1</b></th>
+                          <th><b>2</b></th>
+                          <th><b>3</b></th>
+                          <th><b>4</b></th>
+                          <th><b>5</b></th>
+                          <th><b>6</b></th>
+                          <th><b>7</b></th>
+                          <th><b>8</b></th>
+                          <th><b>9</b></th>
+                          <th><b>10</b></th>
+                          <th><b>11</b></th>
+                          <th><b>12</b></th>
+                          <th><b>Date</b></th>
+                          <th><b>Length</b></th>
+                          <th><b>1</b></th>
+                          <th><b>2</b></th>
+                          <th><b>3</b></th>
+                          <th><b>4</b></th>
+                          <th><b>5</b></th>
+                          <th><b>6</b></th>
+                          <th><b>7</b></th>
+                          <th><b>8</b></th>
+                          <th><b>9</b></th>
+                          <th><b>10</b></th>
+                          <th><b>11</b></th>
+                          <th><b>12</b></th>
+                          <th><b>Date</b></th>
+                          <th><b>Length</b></th>
+                          <th><b>1</b></th>
+                          <th><b>2</b></th>
+                          <th><b>3</b></th>
+                          <th><b>4</b></th>
+                          <th><b>5</b></th>
+                          <th><b>6</b></th>
+                          <th><b>7</b></th>
+                          <th><b>8</b></th>
+                          <th><b>9</b></th>
+                          <th><b>10</b></th>
+                          <th><b>11</b></th>
+                          <th><b>12</b></th>
+                          <th><b>Date</b></th>
+                          <th><b>Length</b></th>
                       </tr>
-
+                      <tbody>
                       <tr *ngFor="let weight of weights" (click)="onClickMe(weight.baby_id)" style="cursor:pointer">
                           <td>{{weight.baby_id}}</td>
                           <td>{{weight.batch_no}}</td>
