--- a/Frontend/src/app/MOHComponents/add-clinic/add-clinic.component.html
+++ b/Frontend/src/app/MOHComponents/add-clinic/add-clinic.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>-->
   <div class="card">
-      <div class="card-header card-header-info">
+      <div class="card-header">
           <h4 class="card-title">Enter Clinic Data</h4>
           <p class="card-category">Complete your profile</p>
       </div>
@@ -66,7 +66,7 @@
                       </div>
                 </div>
              
-              <button mat-raised-button type="submit" class="btn btn-danger pull-right" [disabled]="clinicForm.invalid">Update Profile</button>
+              <button mat-raised-button type="submit" class="btn btn-info pull-right" [disabled]="clinicForm.invalid">Schedule Clinic</button>
               <div class="clearfix"></div>
           </form>
       </div>
